{
    "version": 1,
    "name": "SimInput",
    "maps": [
        {
            "name": "TopDownCamera",
            "id": "6988d171-df9b-4755-9f74-4f339424db07",
            "actions": [
                {
                    "name": "SwitchCamera",
                    "type": "Button",
                    "id": "a72efa40-b5a4-4a43-b7e6-202a84dbcab8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToFriendly",
                    "type": "Button",
                    "id": "6014cf9b-ca92-4fb4-8145-fab319564b2b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToNeutral",
                    "type": "Button",
                    "id": "d42720f3-6f48-4625-bbe9-89d5dfbe6ec6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToHostile",
                    "type": "Button",
                    "id": "ee5a6b08-ca66-4f47-ba25-25d54cb4234a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "d1ca80f3-74e5-485f-9520-37eaf1270667",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Instantiate",
                    "type": "Button",
                    "id": "1ada0fdd-b001-42c0-971c-28d9a5ef29e9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold(duration=0.2,pressPoint=0.3)",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleSimulation",
                    "type": "Button",
                    "id": "24eb3aca-772d-4c5c-b464-88d487664b63",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelInstaniation",
                    "type": "Button",
                    "id": "afb780d2-b251-420c-95dd-68945e269767",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e32db98d-8ce3-4240-aa52-637603e2afdd",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe00a377-4274-4ded-ae3a-4eba0285a0fc",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "155cba06-8b85-4b3f-bbec-590733d8cd3c",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToFriendly",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "553e4c8b-b4c4-4452-bef2-b01af14ede70",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToFriendly",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b0ded10-d4c7-4a53-aee8-2c4867746676",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToNeutral",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c171ac17-4011-4410-98aa-e1ad561f4bed",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToNeutral",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08395aa8-f8d6-4f19-bc17-ef24efc50dcb",
                    "path": "<Keyboard>/numpad3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToHostile",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f5e1019e-65c1-453b-a1d9-ed7681d2c6ae",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToHostile",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ac40f3a-50e9-48d2-90c1-4e2081bb2568",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Instantiate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74dffe8d-69c4-4732-bbc6-de82d7f3c14b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleSimulation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb0731b3-9168-4e95-9678-deb98267446c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelInstaniation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ThirdPerson",
            "id": "bcf8e667-e943-476a-b8b5-5aa242c71f61",
            "actions": [
                {
                    "name": "SwitchCamera",
                    "type": "Button",
                    "id": "08ce5e5a-d6a4-436b-bd3b-3517d0e2cac9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchEntityInc",
                    "type": "Button",
                    "id": "8a4cc7e8-cd00-401a-9cf4-bd52a4b64454",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchEntityDec",
                    "type": "Button",
                    "id": "66053a73-3668-46e5-8ab8-6d98ebee5743",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleSimulation",
                    "type": "Button",
                    "id": "7f4d7d77-c599-4804-aeda-08ce2bc4b5c6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a493cc21-ea84-49f0-954c-5d4556616c77",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1abea46e-5b0a-40d0-8812-4e89cc2295bd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchEntityInc",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62abb253-3455-497f-8aaf-872cefcec711",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchEntityDec",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec32a3aa-aa2d-494c-b015-05731ac8c20e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleSimulation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}